--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                        I'm Capable of working with a variety of technology
                        and software solutions, and managing databases.</p>
 
-                    <p>I'm Valuable team member who has experience diagnosing
+                    <p>I'm a valuable team member who has experience diagnosing
                        problems and developing solutions.
-                       A Growing expertise in HTML5, CSS3, JAVASCRIPT and react.
+                       I have growing expertise in HTML5, CSS3, JAVASCRIPT and react.
                        A Talented team player with unique ideas.
                        While i keep busy coding, i still take interviews in
                        search of a great team and projects that interest me,</p>
